--- a/styles/site.scss
+++ b/styles/site.scss
@@ -4,15 +4,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Exo:wght@300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
 
-
 html,
 body {
   padding: 0;
   margin: 0;
   // font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   //   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
- font-family: "Exo", sans-serif;
- font-family: "Roboto", sans-serif;
+  font-family: "Exo", sans-serif;
+  font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
 }
 
 a {
@@ -202,15 +202,16 @@ form {
   .nav-full-menu {
     position: fixed;
     background-color: whitesmoke;
-    left: 0;
+    display: flex;
+    right: -100%;
     top: 0;
     height: 100vh;
     min-width: 100%;
     text-align: center;
-    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: 0.5s;
     font-size: 2rem;
     #close-nav-btn {
       display: block;
@@ -224,11 +225,9 @@ form {
       margin-bottom: 1rem;
     }
   }
-}
-
-@media (max-width: 600px) {
-  .nav-full-menu {
-    font-size: 1rem;
+  .nav-full-menu.active {
+    right: 0%;
+    transition: 0.5s;
   }
 }
 
