restyled with new logo and colours, added correct services and resizing service cards as screen size changes

--- a/styles/colours.scss
+++ b/styles/colours.scss
@@ -1,3 +1,13 @@
-$original-logo-color: #50b849;
-$original-light: #84eb78;
-$original-dark: #0b8719;
+// $original-logo-color: #50b849;
+// $original-light: #84eb78;
+// $original-dark: #0b8719;
+
+//material design default closest to: #355B36
+// $original-logo-color: #33691e;
+// $original-light: #629749;
+// $original-dark: #003d00;
+
+//matched
+$original-logo-color: #355b36;
+$original-light: #618860;
+$original-dark: #0a3110;
