--- a/styles/site.scss
+++ b/styles/site.scss
@@ -310,16 +310,7 @@ form {
 }
 
 
-//service cards 
-.flex-service-card{
-  width: 19vw;
-}
 
-@media screen and (max-width: 1200px) {
-  .flex-service-card{
-    display: none;
-  }
-}
 
 @media screen and (min-width: 1200px) {
   .primary-large-service-card, .primary-services-row2
@@ -357,4 +348,60 @@ form {
   height: 12vw;
   width: 16vw;
 }
+
+//SERVICES
+
+.main-services-flex-container{
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row; 
+  justify-content: space-around;
+}
+
+ .cards-mid-break {
+   display: none;
+   flex-basis: 100%;
+   width: 100%;
+   height: 40px;
+ }
+
+@media(max-width: 960px){
+.main-services-flex-container{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row; 
+  justify-content: space-around;
+}
+
+.cards-mid-break {
+  display: flex;
+}
+
+.flex-service-card{
+       width:  250px !important;
+     } 
+}
+
+@media(max-width: 830px){
+  .flex-service-card{
+    width:  200px !important;
+  } 
+}
+
+@media(max-width: 680px){
+  .flex-service-card{
+    width:  160px !important;
+  } 
+}
+
+@media(max-width: 576px){
+  .cards-mid-break {
+    display: none;
+  }
+  .flex-service-card,.secondary-service-card {
+    width:  80% !important;
+    padding: 20px;
+  } 
+}
+
 
