--- a/styles/site.scss
+++ b/styles/site.scss
@@ -15,6 +15,12 @@ body {
   overflow-x: hidden;
 }
 
+.no-padding{
+  margin: 0 !important;
+  padding: 0 o !important;
+}
+
+
 a {
   color: inherit;
   text-decoration: none;
@@ -26,6 +32,7 @@ a {
 
 .hover:hover {
   opacity: 0.7;
+  cursor: pointer;
 }
 
 
@@ -310,6 +317,19 @@ form {
 }
 
 
+element.style {
+  background-image: url(/images/service_cards/Dry_mixed_recycling.png);
+}
+#intro {
+  height: 70vh;
+}
+.service-bg-image {
+  position: relative;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50%;
+}
 
 
 @media screen and (min-width: 1200px) {
@@ -355,7 +375,7 @@ form {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row; 
-  justify-content: space-around;
+  //justify-content: space-around;
 }
 
  .cards-mid-break {
@@ -394,14 +414,21 @@ form {
   } 
 }
 
+//.secondary-service-card
+
+
 @media(max-width: 576px){
   .cards-mid-break {
     display: none;
   }
-  .flex-service-card,.secondary-service-card {
+  .flex-service-card {
     width:  80% !important;
-    padding: 20px;
-  } 
+    //padding: 20px;
+  }
+  .secondary-service-card{
+    width:  80% !important;
+  }
+
 }
 
 
