--- a/styles/site.scss
+++ b/styles/site.scss
@@ -174,10 +174,10 @@ footer {
   }
 }
 
-.mask {
-  background-color: rgba(10,49,16, 0.5);
-  //background-color: rgba(0, 80, 24, 0.8);
-}
+// .mask {
+//   //background-color: rgba(10,49,16, 0.5);
+//   //background-color: rgba(0, 80, 24, 0.8);
+// }
 
 .card {
   margin-bottom: 2rem;
@@ -320,9 +320,9 @@ form {
 element.style {
   background-image: url(/images/service_cards/Dry_mixed_recycling.png);
 }
-#intro {
-  height: 70vh;
-}
+// #intro {
+//   height: 70vh;
+// }
 .service-bg-image {
   position: relative;
   overflow: hidden;
