--- a/styles/site.scss
+++ b/styles/site.scss
@@ -153,14 +153,16 @@ footer {
     background-color: whitesmoke;
   }
   h5 {
-    color: $original-light;
+    color: #ffffff;
+    letter-spacing: 1px;
   }
   a,
   li {
     color: whitesmoke;
   }
   a:hover {
-    color: $original-logo-color;
+    opacity: 0.7;
+    color: whitesmoke;
   }
   .copyright {
     background-color: $original-dark;
