--- a/styles/site.scss
+++ b/styles/site.scss
@@ -1,5 +1,6 @@
 @import "colours";
 @import "buttons";
+@import "navbar";
 
 @import url("https://fonts.googleapis.com/css2?family=Exo:wght@300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
@@ -40,89 +41,12 @@ a {
 h2{
   margin-top: 2rem!important;
 }
-/*Navbar */
-
-/*hover drop down*/
-@media all and (min-width: 992px) {
-  .navbar .nav-item .dropdown-menu {
-    display: none;
-  }
-  /* .navbar .nav-item:hover .nav-link{   } */
-  .navbar .nav-item:hover .dropdown-menu {
-    display: block;
-  }
-  .navbar .nav-item .dropdown-menu {
-    margin-top: 0;
-  }
-}
-
-@media (min-width: 992px) {
-  .navbar-expand-lg .navbar-collapse {
-    display: flex !important;
-    flex-basis: auto;
-    flex-direction: row-reverse;
-  }
-}
-
-@media (min-width: 600px) {
-  .navbar.scrolling-navbar {
-    padding-top: 6px;
-    padding-bottom: 6px;
-    transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-  }
-}
-
-.navbar {
-  background-color: white;//rgba(0, 0, 0, 0.2);
-}
-
-@media (min-width: 600px) {
-  .navbar.scrolling-navbar.top-nav-collapse {
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-}
-
-@media (min-width: 600px) {
-  .navbar.scrolling-navbar {
-    padding-top: 6px;
-    padding-bottom: 6px;
-    transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-  }
-}
 
 .page-footer,
 .top-nav-collapse {
   background-color: #ffffff;
 }
 
-.dropdown-toggle:after {
-  display: none;
-}
-
-.navbar-nav .nav-link {
-  color: $original-logo-color !important;
-}
-
-.navbar-nav .nav-link:hover {
-  color: $original-dark !important;
-}
-
-@media (min-width: 992px) {
-  .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: 0.75rem;
-    padding-left: 0.75rem;
-  }
-}
-
-.navbar-dark .navbar-toggler {
-  color: $original-logo-color !important;
-}
-
-nav img {
-  width: 200px;
-  cursor: pointer;
-}
 
 // Header Component
 
@@ -204,96 +128,6 @@ form {
   }
 }
 
-.contact ul li a:hover {
-  color: $original-logo-color;
-}
-
-#close-nav-btn {
-  display: none;
-}
-
-.navbar {
-  z-index: 1000;
-}
-
-@media (max-width: 992px) {
-  .nav-full-menu {
-    position: fixed;
-    z-index: -1;
-    background-color: rgba(0, 80, 24, 1);
-    display: flex;
-    right: -100%;
-    top: 0;
-    height: 100vh;
-    min-width: 100%;
-    text-align: center;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transition: 0.5s;
-    font-size: 16px;
-    #close-nav-btn {
-      display: block;
-      position: absolute;
-      top: 28px;
-      right: 15px;
-      color: $original-logo-color;
-      font-size: 2rem;
-    }
-    li {
-      margin-bottom: 12px;
-    }
-  }
-  .nav-full-menu.active {
-    right: 0%;
-    transition: 0.5s;
-  }
-}
-
-.dropdown-menu {
-  background-color: white;//rgba(0, 80, 24, 1);
-  border-radius: 0 !important;
-  //BORDER RADIUS TOP A
-  .dropdown-item {
-    color: $original-logo-color;
-    border-radius: 0 !important;
-    //  &:hover {
-        
-    //    //background-color: #50b849;
-    //  }
-    //  &:focus {
-    //    //background-color: #50b849;
-    //  }
-  }
-}
-
-@media screen and (max-width: 992px) {
-  .navbar-nav {
-    .dropdown-menu {
-      background-color: transparent;
-      display: block !important;
-      position: relative;
-      top: 0;
-      text-align: center;
-      box-shadow: none;
-      margin-bottom: 0;
-      .dropdown-item {
-        padding: 0;
-      }
-    }
-    .nav-full-menu {
-      li {
-        margin-bottom: 0;
-      }
-    }
-  }
-  .dropdown-menu {
-    background-color: transparent;
-    display: block !important;
-    position: relative;
-  }
-}
-
 @keyframes fade-in {
   0% {
     opacity: 0;
@@ -318,13 +152,8 @@ form {
   }
 }
 
+//SERVICES
 
-element.style {
-  background-image: url(/images/service_cards/Dry_mixed_recycling.png);
-}
-// #intro {
-//   height: 70vh;
-// }
 .service-bg-image {
   position: relative;
   overflow: hidden;
@@ -333,6 +162,12 @@ element.style {
   background-position: 50%;
 }
 
+.center-cropped {
+  object-fit: none; /* Do not scale the image */
+  object-position: center; /* Center the image within the element */
+  height: 12vw;
+  width: 16vw;
+}
 
 @media screen and (min-width: 1200px) {
   .primary-large-service-card, .primary-services-row2
@@ -341,17 +176,6 @@ element.style {
   }
 
 }
-// @media screen and (max-width: 1200px) {
-//   .primary-services-row2
-//   {
-//     display: none;
-//   }
-// }
-
-// .primary-services-row2{
-//  display: none;
-// }
-
 
 .primary-large-service-card-image{
   width: 32vw;
@@ -363,15 +187,6 @@ element.style {
     height: auto;
   }
 }
-
-.center-cropped {
-  object-fit: none; /* Do not scale the image */
-  object-position: center; /* Center the image within the element */
-  height: 12vw;
-  width: 16vw;
-}
-
-//SERVICES
 
 .main-services-flex-container{
   display: flex;
@@ -416,16 +231,12 @@ element.style {
   } 
 }
 
-//.secondary-service-card
-
-
 @media(max-width: 576px){
   .cards-mid-break {
     display: none;
   }
   .flex-service-card {
     width:  80% !important;
-    //padding: 20px;
   }
   .secondary-service-card{
     width:  80% !important;
