images swapped for jpg

--- a/styles/site.scss
+++ b/styles/site.scss
@@ -192,7 +192,7 @@ form {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row; 
-  //justify-content: space-around;
+  justify-content: space-around;
 }
 
  .cards-mid-break {
