--- a/styles/site.scss
+++ b/styles/site.scss
@@ -253,3 +253,21 @@ padding-top: 0;
   display: none;
 }
 }
+
+
+.parallax {
+  height: 500px;
+  width: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
+@media only screen and (max-device-width: 991px) {
+  .parallax {
+    background-attachment: scroll;
+  }
+}
+
