--- a/styles/site.scss
+++ b/styles/site.scss
@@ -28,7 +28,6 @@ header{
 }
 }
 
-
 .no-padding{
   margin: 0 !important;
   padding: 0 o !important;
@@ -67,21 +66,25 @@ header {
   background-color: rgba(0, 80, 24, 0.8);
   color: whitesmoke;
 }
-// #intro {
+
+#intro,#intro2  {
+  height: 70vh;
+}
+@media (max-width: 767px) {
+  #intro,#intro2  {
+    height: 100vh;
+  }
+}
+// #intro2 {
 //   height: 70vh;
 // }
-
-// @media (max-width: 992px) {
-//   #intro {
-//     height: 90vh;
-//   }
-// }
-
 // @media (max-width: 767px) {
-//   #intro {
+//   #intro2 {
 //     height: 100vh;
 //   }
 // }
+
+
 
 .header-text-hightlight-box{
     background-color: #000000;
@@ -89,6 +92,14 @@ header {
     padding: 0 12px;
 }
 
+// #header, #header-img {
+//   height: '70vh !important';
+// }
+// @media (max-width: 767px) {
+//   #header, #header-img {
+//     height: '100vh !important';
+//   }
+// }
 
 
 // Footer Component
