add semi-pro photos

--- a/styles/colours.scss
+++ b/styles/colours.scss
@@ -11,3 +11,8 @@
 $original-logo-color: #355b36;
 $original-light: #618860;
 $original-dark: #0a3110;
+
+//theses should be customized for this website
+$danger-color: #cf1322;//#FC3932;
+$success-color: #389e0d;//#46C000;
+$action-color:#608BD8;
