images sizes and text stylistic tweaks

--- a/styles/site.scss
+++ b/styles/site.scss
@@ -77,7 +77,7 @@ header {
 }
 
 #intro-sm,#intro2-sm  {
-  height: 35vh;
+  height: 50vh//35vh;
 }
 @media (max-width: 767px) {
   #intro-sm,#intro2-sm  {
