updated about section

--- a/styles/site.scss
+++ b/styles/site.scss
@@ -351,3 +351,7 @@ padding-top: 0;
   padding-top: 5px;
   }
   
+  .horizontal-center-singleitem {
+    display: flex;
+    justify-content: center;
+}
