--- a/styles/colours.scss
+++ b/styles/colours.scss
@@ -27,3 +27,7 @@ $offwhite2-color: #f5f5f5;
 .background-offwhite2{
     background-color: $offwhite2-color;
 }
+
+
+$primary-color: #48AF67;
+$light-grey-bg-color: #EAF2F4;
