--- a/styles/buttons.scss
+++ b/styles/buttons.scss
@@ -1,11 +1,12 @@
-@import "colours";
+//@import "colours";
 
 .btn-success {
-  background-color: $original-logo-color;
+  background-color: $primary-color;
   color: white;
 }
 
 .btn-success:hover {
-  background-color: $original-light;//$original-dark;
+  opacity: 0.7;
+  //background-color: $original-light;//$original-dark;
   color: white;
 }
